Use http client to invoke core module from admin module